# eva

./: .gitignore  CMakeLists.txt  Makefile  eva.geany
include/: #structural_problem.hpp#  beam_problem.hpp  boost_flat_container_serialization.hpp  clamped_bar_problem.hpp  continuous_structural_problem.hpp  continuous_structural_problem.hpp~  core.hpp  core.hpp~  core_sa.hpp  core_sa.hpp~  eigen_boost_serialization.hpp  frame.hpp  graphviz.hpp  io.hpp  num_array.hpp  pagmo_utils.hpp  parser.hpp  solver_parameters.hpp  structural_problem.hpp  structural_problem.hpp~  structure.hpp  thermo.hpp  thermo.hpp~  thermo_frame_problem.hpp  thermo_frame_problem_utils.hpp  truss.hpp  utils.hpp  utils.hpp~  vtk.hpp  vtk.hpp~
input/: config.conf  frame2d.dot  frame2d_2.dot  ideal_input.in  truss2d.dot  truss2d_2.dot  truss3d.dot
output/: frame2d.dot  truss2d.dot  truss3d.dot
pagmo/: CMakeLists.txt
pagmo/bridge/: CMakeLists.txt  CMakeLists.txt~  bridge.cpp  bridge.cpp~
pagmo/cantilever/: CMakeLists.txt  cantilever.cpp  cantilever.cpp~
pagmo/clamped_bar/: CMakeLists.txt  main.cpp  optimize.cpp  post_process.cpp
src/: #continuous_structural_problem.cpp#  clamped_bar_problem.cpp  continuous_structural_problem.cpp  continuous_structural_problem.cpp~  core.tcc  core_sa.tcc  core_sa.tcc~  main.cpp  pagmo_utils.cpp  sa.tcc~  structural_problem.cpp  structural_problem.cpp~  thermo_frame_problem.cpp  thermo_frame_problem_utils.cpp  utils.cpp  vtk.cpp  vtk.cpp~
tests/: CMakeLists.txt  Makefile  test_vtk.cpp~
tests/frame2d/: CMakeLists.txt  CMakeLists.txt~  frame2d.cpp  frame2d.cpp~  main.cpp
tests/main/: CMakeLists.txt  main.cpp
tests/old/: eigen.cpp  snippets.cpp  test_armadillo.cpp  test_graphviz.cpp  test_parser.backup.cpp  test_parser.cpp  test_vtk.cpp
tests/thermo/: CMakeLists.txt  main.cpp
tests/truss2d/: CMakeLists.txt  CMakeLists.txt~  main.cpp  truss2d.cpp  truss2d.cpp~
tests/vtk/: CMakeLists.txt
tests/vtk/PolyLineDraw/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_vtk  test_vtk.cpp
tests/vtk/PolyLineSaveVTP/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  save_to_vtp  save_to_vtp.cpp  test.vtp
tests/vtk/WriteVTU/: #write_vtu.cpp#  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  test.vtu  write-bin  write_vtu.cpp
